Bug 289094 - top bar time incorrectly displays in 24 hour format
Summary: top bar time incorrectly displays in 24 hour format
Status: RESOLVED FIXED
Alias: None
Product: Active
Classification: Unmaintained
Component: Top Bar (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: unscheduled
Assignee: active
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-16 05:32 UTC by Carl Symons
Modified: 2012-01-27 13:20 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Signal time format has changed. (1.11 KB, patch)
2011-12-16 18:16 UTC, Lamarque V. Souza
Details
Reset time format. (2.64 KB, patch)
2011-12-16 18:18 UTC, Lamarque V. Souza
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Carl Symons 2011-12-16 05:32:33 UTC
Version:           unspecified (using KDE 4.7.3) 
OS:                Linux

time in center of top bar displays in 24 hour format even though 12 hour is selected Active Settings. Date and Time setting app doesn't have a way to change from 24 hour format

Reproducible: Always

Steps to Reproduce:
start Plasma Active

Actual Results:  
time is displayed in 24 hour format

Expected Results:  
date should be shown in 12 hour format when that user selects that format
Comment 1 Lamarque V. Souza 2011-12-16 12:11:16 UTC
The new setting works after a reboot. I will fix it to apply the new setting immediately.
Comment 2 Lamarque V. Souza 2011-12-16 18:16:41 UTC
Created attachment 66814 [details]
Signal time format has changed.
Comment 3 Lamarque V. Souza 2011-12-16 18:18:59 UTC
Created attachment 66815 [details]
Reset time format.

I think is patch is better go to kdelibs, but I do not know if it is still in freeze or if this patch can cause side effects. I wanted someone to review it before commiting it (either to kde-workspace or kdelibs).
Comment 4 Lamarque V. Souza 2011-12-16 18:51:33 UTC
Git commit 84aa35b98b5aafffe977c7e841564882a98e618a by Lamarque V. Souza.
Committed on 16/12/2011 at 19:08.
Pushed by lvsouza into branch 'master'.

Signal other KDE programs that time settings have changed. This is half
of the fix for #289094, the other half depends on approval of this other
patch http://git.reviewboard.kde.org/r/103434/

CCBUG: 289094

M  +2    -0    applications/settings/modules/time/timesettings.cpp

http://commits.kde.org/plasma-mobile/84aa35b98b5aafffe977c7e841564882a98e618a
Comment 5 Lamarque V. Souza 2011-12-17 22:57:39 UTC
Git commit abea4749230d253c8e535f91f0e1fd7435ec1ed1 by Lamarque V. Souza.
Committed on 17/12/2011 at 14:25.
Pushed by lvsouza into branch 'ksmserver/qml-shutdowndlg'.

Reset time format in clock plasmoid when receiving the signal using
KGlobalSettings::self()->emitChange(KGlobalSettings::SettingsChanged,
KGlobalSettings::SETTINGS_COMPLETION);

BUG: 289094

M  +15   -0    plasma/generic/applets/digital-clock/clock.cpp
M  +1    -0    plasma/generic/applets/digital-clock/clock.h

http://commits.kde.org/kde-workspace/abea4749230d253c8e535f91f0e1fd7435ec1ed1
Comment 6 Lamarque V. Souza 2011-12-22 13:24:04 UTC
Git commit 68ec5f077e20afe09def364d6e76ecbe989db02d by Lamarque V. Souza.
Committed on 19/12/2011 at 16:15.
Pushed by lvsouza into branch 'ksmserver/qml-shutdowndlg'.

Reset time format upon user request.

CCBUG: 289094
REVIEW: 103434

M  +12   -0    plasma/generic/applets/digital-clock/clock.cpp
M  +1    -0    plasma/generic/applets/digital-clock/clock.h

http://commits.kde.org/kde-workspace/68ec5f077e20afe09def364d6e76ecbe989db02d
Comment 7 Lamarque V. Souza 2011-12-27 12:41:00 UTC
Git commit 7bc79dbefc2f52f92657d87c13c73170a5313e40 by Lamarque V. Souza.
Committed on 21/12/2011 at 16:11.
Pushed by lvsouza into branch 'KDE/4.8'.

Make KGlobalSettings reread locale settings before calling
settingsChanged().
Related: bug 289094
REVIEW: 103469

M  +5    -0    kdecore/localization/klocale.cpp
M  +8    -0    kdecore/localization/klocale.h
M  +5    -5    kdecore/localization/klocale_p.h
M  +4    -0    kdeui/kernel/kglobalsettings.cpp
M  +2    -1    kdeui/kernel/kglobalsettings.h

http://commits.kde.org/kdelibs/7bc79dbefc2f52f92657d87c13c73170a5313e40
Comment 8 Lamarque V. Souza 2011-12-27 12:50:39 UTC
Git commit 8bd86323cdbd11ffafb71b6d8f4836d0d4339af3 by Lamarque V. Souza.
Committed on 19/12/2011 at 16:15.
Pushed by lvsouza into branch 'KDE/4.8'.

Reset time format upon user request.
Related: bug 289094
REVIEW: 103434

M  +12   -0    plasma/generic/applets/digital-clock/clock.cpp
M  +1    -0    plasma/generic/applets/digital-clock/clock.h

http://commits.kde.org/kde-workspace/8bd86323cdbd11ffafb71b6d8f4836d0d4339af3
Comment 9 Lamarque V. Souza 2011-12-27 17:38:21 UTC
Git commit 30818ce87f053507cf3b86023f31ffe5edf9f87b by Lamarque V. Souza.
Committed on 27/12/2011 at 18:37.
Pushed by lvsouza into branch 'master'.

Use correct parameter to signal other KDE processes that time format
has changed.
Related: bug 289094

M  +1    -1    applications/settings/modules/time/timesettings.cpp

http://commits.kde.org/plasma-mobile/30818ce87f053507cf3b86023f31ffe5edf9f87b
Comment 10 Sebastian Trueg 2012-01-27 13:20:48 UTC
Git commit 87756493f51716594c5ad40f29a5c92ee66e0425 by Sebastian Trueg, on behalf of Lamarque V. Souza.
Committed on 21/12/2011 at 16:11.
Pushed by trueg into branch 'KDE/4.8'.

Make KGlobalSettings reread locale settings before calling
settingsChanged().
REVIEW: 103469

M  +5    -0    kdecore/localization/klocale.cpp
M  +8    -0    kdecore/localization/klocale.h
M  +5    -5    kdecore/localization/klocale_p.h
M  +4    -0    kdeui/kernel/kglobalsettings.cpp
M  +2    -1    kdeui/kernel/kglobalsettings.h

http://commits.kde.org/kdelibs/87756493f51716594c5ad40f29a5c92ee66e0425