Reset time format in clock plasmoid when receiving the signal using KGlobalSettings::self()->emitChange(KGlobalSettings::SettingsChanged, KGlobalSettings::SETTINGS_COMPLETION);

BUG: 289094